13 September 2004
- Added construct_min/max_vertex_2/3 in the kernel archetype interface macros

7 September 2004 Andreas Fabri
- Added functions and functor for constructing min and max vertex of iso rectangle and cuboid

5 September 2004 Menelaos Karavelas & Sylvain Pion
- excluded unsigned numbers from being models of RingNumberType

4 September 2004 Menelaos Karavelas
- re-wrote author names in copyright notices using 7-bit characters

1 September 2004 Sylvain Pion
- basic.h : move CGAL_*_INLINE macros before the include files.

25 August 2004 Sylvain Pion
- Improve example in Filtered_predicate<> documentation.

24 August 2004 Andreas Fabri
- changes in doc_tex for pdflatex

24 August 2004 Sylvain Pion
- Add #include <CGAL/IO/io.h> in Bbox_[23].h.

23 August 2004 Sylvain Pion
- Document check_tag().

4 August 2004 Sylvain Pion
- Filtered_kernel.tex : re-enable some of my documentation shamefully
  commented out by Andreas, and add a note on CGAL_NO_STATIC_FILTERS.

20 July 2004 Sylvain Pion
- Deprecate Construct_supporting_line_[23] (redundant with Construct_line_[23]).

20 July 2004 Sylvain Pion
- known_bit_size_integers.h : add IA64 support.

24 June 2004 Radu Ursu
- include/CGAL/basic.h no longer includes LEDA_basic.h. This dependency goes in the headers that need it. 

22 June 2004 Sylvain Pion
- Do not test Compute_area_3 when RT does not support sqrt().

20 June 2004 Sylvain Pion
- Move are_positive_oriented() and are_negative_oriented() after
  the definition of orientation() which they call with qualification.

5 June 2004 Sylvain Pion
- Remove warnings in the test-suite.

19 May 2004 Andreas Fabri
- The Cartesian/global_operators_{2,3}.h are turned into function objects 

9 Apr 2004 Sylvain Pion
- Fix doc typo : Leftturn_2 -> Left_turn_2.

16 March 2004 Andreas Fabri
- Move the following to the new scheme :
  signed_distance_to_{point,line_plane}

13 Mar 2004 Sylvain Pion
- Move centroid() to the new scheme.

13 Mar 2004 Sylvain Pion