@@ -39,7 +39,7 @@ in the kernel.
 \input{Kernel_23_ref/Cartesian_converter.tex}
 \input{Kernel_23_ref/cartesian_to_homogeneous.tex}
 \input{Kernel_23_ref/Filtered_kernel.tex}
-\input{Kernel_23_ref/Filtered_kernel_without_type_equality.tex}
+\input{Kernel_23_ref/Filtered_kernel_adaptor.tex}
 \input{Kernel_23_ref/Filtered_predicate.tex}
 \input{Kernel_23_ref/Homogeneous.tex}
 \input{Kernel_23_ref/Homogeneous_converter.tex}
